--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name></display-name>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.service.LoginServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/api/login</url-pattern>
-  </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<display-name></display-name>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.service.LoginServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>InitGetTokenServlet</servlet-name>
+		<servlet-class>com.service.InitGetTokenServlet</servlet-class>
+		<!--配置获取access_token所需参数appid和appsecret -->
+		<init-param>
+			<param-name>appId</param-name>
+			<param-value>wx0a6e11ce9b1a3417</param-value>
+		</init-param>
+		<init-param>
+			<param-name>appSecret</param-name>
+			<param-value>c654fc6285e19f821cf4539d0ac6ba24</param-value>
+		</init-param>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/api/login</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>InitGetTokenServlet</servlet-name>
+		<url-pattern>/servlet/InitGetTokenServlet</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
