--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -11,7 +11,16 @@
 	<servlet>
 		<servlet-name>InitGetTokenServlet</servlet-name>
 		<servlet-class>com.service.InitGetTokenServlet</servlet-class>
-		<!--配置获取access_token所需参数appid和appsecret -->
+		<!--配置获取access_token所需参数appid和appsecret 
+		<init-param>
+			<param-name>appId</param-name>
+			<param-value>wx0a6e11ce9b1a3417</param-value>
+		</init-param>
+		<init-param>
+			<param-name>appSecret</param-name>
+			<param-value>c654fc6285e19f821cf4539d0ac6ba24</param-value>
+		</init-param>
+		-->
 		<init-param>
 			<param-name>appId</param-name>
 			<param-value>wx0a6e11ce9b1a3417</param-value>
